overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,8 @@ html {
 }
 
 body {
-  margin: 0
+  margin: 0;
+  overflow-x: hidden;
 }
 
 article,
